updates build action to delete package lock before build

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -57,10 +57,12 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
+      - name: Remove package-lock.json
+        run: rm package-lock.json
+        working-directory: ${{ env.BUILD_PATH }}
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
         working-directory: ${{ env.BUILD_PATH }}
