--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -64,7 +64,7 @@ jobs:
         run: rm package-lock.json
         working-directory: ${{ env.BUILD_PATH }}
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: npm i
         working-directory: ${{ env.BUILD_PATH }}
       - name: Build with Astro
         run: |
