--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -50,7 +50,7 @@ jobs:
         working-directory: ${{ env.BUILD_PATH }}
       - name: Build with Astro
         run: |
-          npm astro build \
+          npm run astro build \
             --site "${{ steps.pages.outputs.origin }}" \
             --base "${{ steps.pages.outputs.base_path }}"
         working-directory: ${{ env.BUILD_PATH }}
