tries removing base path from build

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -51,8 +51,7 @@ jobs:
       - name: Build with Astro
         run: |
           npm run astro build \
-            --site "${{ steps.pages.outputs.origin }}" \
-            --base "${{ steps.pages.outputs.base_path }}"
+            --site "${{ steps.pages.outputs.origin }}"
         working-directory: ${{ env.BUILD_PATH }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
