--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
     "astro": "^4.0.3",
+    "astro-relative-links": "^0.3.7",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0"
