--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "license": "MIT",
   "dependencies": {
     "@astrojs/markdoc": "^0.8.0",
+    "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.0.7",
     "@keystatic/astro": "^5.0.0",
     "@keystatic/core": "^0.5.7",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
     "astro": "^4.0.3",
+    "astro-auto-import": "^0.4.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0"
