--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@astrojs/react": "^3.0.7",
     "@keystatic/astro": "^5.0.0",
     "@keystatic/core": "^0.5.7",
+    "@monaco-editor/react": "^4.6.0",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
     "astro": "^4.0.3",
