--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "astro-auto-import": "^0.4.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "simple-parallax-js": "^5.6.2"
   },
   "scripts": {
     "dev": "astro dev",
