--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "astro": "^4.0.3",
     "astro-auto-import": "^0.4.2",
+    "font-picker-react": "^3.5.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
