--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
+    "aos": "^2.3.4",
     "astro": "^4.0.3",
     "astro-auto-import": "^0.4.2",
     "react": "^18.2.0",
@@ -24,5 +25,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
