--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -39,12 +39,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
-      - name: Remove package-lock.json
-        run: rm package-lock.json
-        working-directory: ${{ env.BUILD_PATH }}
       - name: Install dependencies
         run: npm i
         working-directory: ${{ env.BUILD_PATH }}
