--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "astro": "^4.0.3",
     "astro-auto-import": "^0.4.2",
+    "colord": "^2.9.3",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
