--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^4.0.3",
     "astro-auto-import": "^0.4.2",
     "colord": "^2.9.3",
+    "glightbox": "^3.3.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
