--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro-auto-import": "^0.4.2",
     "colord": "^2.9.3",
     "glightbox": "^3.3.0",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
