--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -6,8 +6,9 @@ name: Deploy Astro site to Pages
 
 on:
   # Runs on pushes targeting the default branch
+  # uncomment these two lines to enable GitHub Pages builds
   push:
-    branches: ["main"]
+  #  branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
